--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,9 +3,16 @@
 
 {% block content%}
     <article class="post">
+        <aside class="actions">
+            {% if user.is_authenticated %}
+            <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-default">
+                {% include './icons/pencil-fill.svg' %}
+            </a
+            {% endif %}
+        ></aside>
         {% if post.published_date %}
             <time class="date">
-                {{ post.published_date }}
+                {{ post.published_date }}   
             </time>
         {% endif %}
         <h2>{{ post.title }}</h2>
