--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,9 @@
                 <a href="{% url 'post_new' %}" class="top-menu" role="button">
                     {% include './icons/file-earmark-plus.svg' %}
                 </a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu">
+                    <span class="glyphicon glyphicon-edit"></span>
+                </a>
                 {% endif %}
                 <h1><a href="/">Django Girls Blog</a></h1>
             </div>
