--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,13 +7,20 @@
             {% if user.is_authenticated %}
             <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-default">
                 {% include './icons/pencil-fill.svg' %}
-            </a
+            </a>
+            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">
+                <span class="glyphicon glyphicon-remove">
+                    {% include './icons/x-square-fill.svg' %}
+                </span>                
+            </a>
             {% endif %}
         ></aside>
         {% if post.published_date %}
             <time class="date">
                 {{ post.published_date }}   
             </time>
+        {% else %}
+            <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-default">Publish</a>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text | linebreaksbr }}</p>
